--- a/content/entries/2013-04-11.md
+++ b/content/entries/2013-04-11.md
@@ -2,4 +2,6 @@ Title: It's alive!
 
 So, that wasn't so hard. Pulled the trigger today on this jimperio.com domain.
 
+Currently using <a href="http://github.com/getpelican/pelican">Pelican</a>, and hosting the static output on <a href="http://pages.github.com">GitHub Pages</a>. The source for this blog is also on <a href="https://github.com/jimperio/jimperio.blog">GitHub</a>.
+
 We'll see what we can make of this. Quite obviously, this website is still under construction: expect more content (and even more tweaking) in the coming weeks.
