--- a/content/entries/2013-04-12.md
+++ b/content/entries/2013-04-12.md
@@ -4,4 +4,6 @@ Slowly getting this blog up to speed. As mentioned previously, I'm currently hos
 
 I moved from a User page to a Project page, which has the benefit of allowing me to keep both the source and the actual static website output in the <a href="http://github.com/jimperio/jimperio.blog">same repo</a>, only on different branches. <a href="https://github.com/davisp/ghp-import">ghp-import</a> is very useful and makes managing the gh-pages branch almost brainless.
 
-Hopefully by next week I'll be able to focus more on writing new entries. Although I have to admit that this setup stuff is fun, too! I haven't used git much (at all) on previous projects, and it still feels a bit strange to me, being more used to hg.
+Hopefully by next week I'll be able to focus more on writing new entries. Although I have to admit that this setup stuff is fun, too! I haven't used git much (at all) on previous projects, and it still feels a bit strange to me, being more used to hg. I'm also pretty new to Markdown, and I haven't really touched HTML/CSS in a long time...
+
+Well, I'm just glad it was this easy to get a(n admittedly simple, static) website up and running. Now, to optimize the writing, updating, and deployment workflow!
