--- a/content/entries/0002.md
+++ b/content/entries/0002.md
@@ -1,4 +1,5 @@
 Title: Setting up a workflow
+Date: 2013-04-12
 
 Slowly getting this blog up to speed. As mentioned previously, I'm currently hosting this website on <a href="http://pages.github.com">GitHub Pages</a>, and I've no real complaints so far. Setup has been mostly painless and easy.
 
