--- a/content/entries/0003.md
+++ b/content/entries/0003.md
@@ -1,6 +1,10 @@
-Title: Anathem
-status: draft
+Title: Anathem and the appeal of the academe
+Date: 2013-04-15
 
-thinking man's thriller
+I'm currently reading -- well, devouring, really -- Neal Stephenson's [*Anathem*](http://en.wikipedia.org/wiki/Anathem "Anathem on Wikipedia"). I've previously read and thoroughly enjoyed his *Cryptonomicon* and *Snow Crash*, and I have to say that he writes refreshingly intellectual pageturners, which seems to me a fairly rare class. (Of course, I'd be really glad to be proved otherwise!)
 
-appeal of the academe: dealing with intellectual abstractions and generalities, discovering new things about the world or useful new ways of looking at the world, research building on previous research and so on
+One of the things that attracted and held me to *Anathem's* world is the concept and depiction of the Mathic culture and society. In brief, it's a manifestation of the proverbial ivory tower. People swear a vow to withdraw from the outside world and devote themselves to learning and the pursuit of knowledge. Their retreats (called maths) are essentially secular monasteries -- they don't abide by any particular religion, and most are in fact areligious.
+
+Of course, this is a big idealization, but for me it does express quite well the appeal of the academe: the freedom to learn for learning's sake, the heavy-if-not-exclusive dealing in intellectual abstractions and generalities, the thrill of doing research and discovering new things about the world or useful new ways of looking at the world, and the feeling of becoming part of a great tradition.
+
+I can't say whether I'll ever go back to university, but it probably will always remain in that "someday maybe" compartment in the back of my mind. In the meantime, I'll feed the urge with novels like *Anathem* and my little hobbyist forays into writing, philosophy, history, and literature, which I really do need to make more time and find more energy for...
