Expanded a bit on the Anathem entry.

--- a/content/entries/0003.md
+++ b/content/entries/0003.md
@@ -1,10 +1,14 @@
 Title: Anathem and the appeal of the academe
 Date: 2013-04-15
 
-I'm currently reading -- well, devouring, really -- Neal Stephenson's [*Anathem*](http://en.wikipedia.org/wiki/Anathem "Anathem on Wikipedia"). I've previously read and thoroughly enjoyed his *Cryptonomicon* and *Snow Crash*, and I have to say that he writes refreshingly intellectual pageturners, which seems to me a fairly rare class. (Of course, I'd be really glad to be proved otherwise!)
+I'm currently reading -- well, devouring, really -- Neal Stephenson's [*Anathem*](http://en.wikipedia.org/wiki/Anathem "Anathem on Wikipedia"). I've previously read and thoroughly enjoyed his *Cryptonomicon* and *Snow Crash*, and I have to say that he writes refreshingly intellectual pageturners, which seems to me a fairly rare class. (Of course, I'd be really glad to be proved otherwise!) I mean, one wouldn't generally expect something like the many-worlds interpretation of quantum mechanics to be an important theme in a pageturner, or for the main character to be an academic.
 
-One of the things that attracted and held me to *Anathem's* world is the concept and depiction of the Mathic culture and society. In brief, it's a manifestation of the proverbial ivory tower. People swear a vow to withdraw from the outside world and devote themselves to learning and the pursuit of knowledge. Their retreats (called maths) are essentially secular monasteries -- they don't abide by any particular religion, and most are in fact areligious.
+One of the things that attracted and held me to *Anathem's* world is the concept and depiction of the Mathic culture and society. In brief, it's a manifestation of the proverbial ivory tower. Members of this society, called avout, swear a vow to withdraw from the outside world and devote themselves to learning and the pursuit of knowledge. Their retreats (called maths) are essentially secular monasteries -- they don't abide by any particular religion, and most are in fact areligious. Maths are generally self-sufficient and self-contained, and the avout are provided rigorous intellectual training before being set free to pursue their interests, no matter how arcane or esoteric.
 
-Of course, this is a big idealization, but for me it does express quite well the appeal of the academe: the freedom to learn for learning's sake, the heavy-if-not-exclusive dealing in intellectual abstractions and generalities, the thrill of doing research and discovering new things about the world or useful new ways of looking at the world, and the feeling of becoming part of a great tradition.
+It all sounds so much like a place I would love to be able to call home.
+
+*
+
+Of course, I do realize that the whole thing is a big idealization. In the real world, entering the academe comes with its own particular set of practical difficulties. Still, for me it does express quite well the appeal of the academe: the freedom to learn for learning's sake, the heavy-if-not-exclusive dealing in intellectual abstractions and generalities, the thrill of doing research and discovering new things about the world or useful new ways of looking at the world, and the feeling of becoming part of a great tradition. There are the impassioned debates and disciplined conversations one can have with fellow academics. There is that purity and elegance of theory over practice that I still can't quite verbalize even though it's what supposedly made my naive pre-college self choose "pure" physics over applied physics.
 
 I can't say whether I'll ever go back to university, but it probably will always remain in that "someday maybe" compartment in the back of my mind. In the meantime, I'll feed the urge with novels like *Anathem* and my little hobbyist forays into writing, philosophy, history, and literature, which I really do need to make more time and find more energy for...
