--- a/content/entries/0005.md
+++ b/content/entries/0005.md
@@ -1,4 +1,4 @@
-Title: The secret to poetry
+Title: The secret to writing poetry
 Date: 2013-04-19
 
 I just finished Nicholson Baker's *The Anthologist*. It was a fairly quick read, in Baker's smart, introspective, stream-of-consciousness style, filled with well-observed detail and unabashed(ly interesting) digressions. There are funny moments, beautiful ones, poignant ones, and all throughout a comfortable verisimilitude. It seemed to me an honest and convincing portrayal of what might be going through a poet's mind and how they look at the world and think about poetry. The protagonist also makes a pretty good case for rhyme and meter, and makes me realize that I do need to give those more attention and study if I'm serious about continuing to attempt to write poetry.
