Minor change to trigger rebuild

--- a/content/entries/0007.md
+++ b/content/entries/0007.md
@@ -11,4 +11,4 @@ Hello, 2015, let's kick ass! It's time to finally do the things I've wanted to d
 * Learn to swim
 * Write and blog regularly
 
-I need to remember: it's just about continuing to move forward, bit by bit, every day.
+I need to remember: it's just about continuing to move forward, bit by bit, every day!
